Update navigation link in corporate transactions module and add new module for creative collaboration in the hub

--- a/Corporate-Strategy/global-strategy.html
+++ b/Corporate-Strategy/global-strategy.html
@@ -445,6 +445,12 @@
 
             // MNE Strategy Chart
             const ctx = document.getElementById('mne-strategy-chart').getContext('2d');
+            const strategyLabels = [
+                { x: -5, y: -7, text: 'International' },
+                { x: 5, y: -7, text: 'Localization' },
+                { x: -5, y: 3, text: 'Global-Standardization' },
+                { x: 5, y: 3, text: 'Transnational' }
+            ];
             const mneChart = new Chart(ctx, {
                 type: 'scatter',
                 data: {
@@ -513,7 +519,7 @@
                                 font: { size: 14 }
                             },
                             ticks: { display: false },
-                             grid: {
+                            grid: {
                                 drawBorder: false,
                                 drawOnChartArea: true,
                                 color: '#e2e8f0',
@@ -523,31 +529,44 @@
                     },
                     plugins: {
                         legend: { display: false },
-                        tooltip: { enabled: false },
-                        annotation: {
-                            annotations: {
-                                label1: { type: 'label', xValue: -5, yValue: -5, content: 'International', font: {size: 12, weight: 'bold'}, color: 'black'},
-                                label2: { type: 'label', xValue: 5, yValue: -5, content: 'Localization', font: {size: 12, weight: 'bold'}, color: 'black'},
-                                label3: { type: 'label', xValue: -5, yValue: 5, content: 'Global-Std.', font: {size: 12, weight: 'bold'}, color: 'black'},
-                                label4: { type: 'label', xValue: 5, yValue: 5, content: 'Transnational', font: {size: 12, weight: 'bold'}, color: 'black'}
-                            }
-                        }
+                        tooltip: { enabled: false }
                     },
                     layout: {
                         padding: 20
                     }
                 },
-                plugins: [{
-                    id: 'customCanvasBackgroundColor',
-                    beforeDraw: (chart, args, options) => {
-                      const {ctx} = chart;
-                      ctx.save();
-                      ctx.globalCompositeOperation = 'destination-over';
-                      ctx.fillStyle = options.color || '#F8F7F4';
-                      ctx.fillRect(0, 0, chart.width, chart.height);
-                      ctx.restore();
+                plugins: [
+                    {
+                        id: 'customCanvasBackgroundColor',
+                        beforeDraw: (chart, args, options) => {
+                            const {ctx} = chart;
+                            ctx.save();
+                            ctx.globalCompositeOperation = 'destination-over';
+                            ctx.fillStyle = options.color || '#F8F7F4';
+                            ctx.fillRect(0, 0, chart.width, chart.height);
+                            ctx.restore();
+                        }
+                    },
+                    {
+                        id: 'strategyLabels',
+                        afterDatasetsDraw: (chart) => {
+                            const {ctx, scales: {x, y}} = chart;
+                            ctx.save();
+                            ctx.font = 'bold 15px Inter, Arial, sans-serif';
+                            ctx.textAlign = 'center';
+                            ctx.textBaseline = 'bottom';
+                            strategyLabels.forEach((label, i) => {
+                                ctx.fillStyle = '#111827'; // Tailwind slate-900 (almost black)
+                                ctx.strokeStyle = '#fff'; // White outline for clean contrast
+                                ctx.lineWidth = 4;
+                                // Draw text with white outline for clarity
+                                ctx.strokeText(label.text, x.getPixelForValue(label.x), y.getPixelForValue(label.y));
+                                ctx.fillText(label.text, x.getPixelForValue(label.x), y.getPixelForValue(label.y));
+                            });
+                            ctx.restore();
+                        }
                     }
-                }]
+                ]
             });
 
 
