--- a/Creative-Thinking/creative-thinking-hub.html
+++ b/Creative-Thinking/creative-thinking-hub.html
@@ -157,6 +157,12 @@
                 <a href="team-ideas.html" class="module-link rounded-lg">Module 3: The Case for Team</a>
             </li>
         </ul>
+        <ul>
+            <li>
+                <a href="module4_toolkit2.html" class="module-link rounded-lg">Module 4: Creative Collaboration - Overcoming Impasses</a>
+            </li>
+        </ul>
+
 
         <div class="ai-feature-box rounded-lg">
             <h2 class="text-xl font-bold mb-4">✨ Creative Spark Generator</h2>
