--- a/Corporate-Strategy/corporate-transactions.html
+++ b/Corporate-Strategy/corporate-transactions.html
@@ -44,7 +44,7 @@
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex flex-col sm:flex-row items-center justify-between py-4 relative">
                 <div class="flex items-center mb-4 sm:mb-0">
-                    <a href="index.html" class="flex items-center text-primary-blue hover:text-secondary-blue transition-colors mr-4">
+                    <a href="corporate-strategy-hub.html" class="flex items-center text-primary-blue hover:text-secondary-blue transition-colors mr-4">
                         <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor" stroke-width="2">
                            <path stroke-linecap="round" stroke-linejoin="round" d="M10 19l-7-7m0 0l7-7m-7 7h18" />
                         </svg>
