--- a/Corporate-Strategy/corporate-strategy-hub.html
+++ b/Corporate-Strategy/corporate-strategy-hub.html
@@ -117,7 +117,7 @@
                 </div>
                 <h2 class="text-3xl font-bold text-gray-800 mb-4">Stakeholders and Governance</h2>
                 <p class="text-gray-600 mb-6">Manage relationships with stakeholders and corporate governance.</p>
-                <a href="#" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
+                <a href="corporate-governance.html" class="bg-red-600 hover:bg-red-700 text-white font-semibold py-3 px-8 rounded-full transition duration-300 ease-in-out shadow-md hover:shadow-lg">
                     Explore
                 </a>
             </div>
