--- a/Creative-Thinking/creative-thinking-hub.html
+++ b/Creative-Thinking/creative-thinking-hub.html
@@ -120,12 +120,15 @@
     </style>
 </head>
 <body>
+    <header class="bg-gradient-to-r from-blue-500 via-teal-400 to-green-400 shadow-md py-6 mb-8">
+        <div class="container mx-auto px-6 flex flex-col items-center">
+            <h1 class="text-4xl font-bold text-slate-900 mb-2 drop-shadow">Creativity Toolkit Notes</h1>
+            <p class="text-center text-lg text-slate-900/90">Welcome to your organized notes from the Gies College of Business Creativity Toolkit courses. Use the links below to navigate through each module.</p>
+        </div>
+    </header>
     <div class="container rounded-xl">
-        <h1>Creativity Toolkit Notes</h1>
 
-        <p class="text-center text-lg mb-8">Welcome to your organized notes from the Gies College of Business Creativity Toolkit courses. Use the links below to navigate through each module.</p>
-
-        <h2>Creativity Toolkit I: Changing Perspectives</h2>
+        <h2 class="bg-gradient-to-r from-amber-400 via-yellow-300 to-orange-400 text-slate-900 px-4 py-2 rounded-lg shadow mb-4">Creativity Toolkit I: Changing Perspectives</h2>
         <ul>
             <li>
                 <a href="module1_toolkit1.html" class="module-link rounded-lg">Module 1: Changing Perspectives - Introduction and Myths</a>
@@ -141,7 +144,7 @@
             </li>
         </ul>
 
-        <h2>Creativity Toolkit II: Creative Collaboration</h2>
+        <h2 class="bg-gradient-to-r from-purple-400 via-pink-300 to-red-400 text-slate-900 px-4 py-2 rounded-lg shadow mb-4">Creativity Toolkit II: Creative Collaboration</h2>
         <ul>
             <li>
                 <a href="module1_toolkit2.html" class="module-link rounded-lg">Module 1: Creative Collaboration - Social Influence and Pitching Ideas</a>
@@ -149,12 +152,12 @@
         </ul>
         <ul>
             <li>
-                <a href="idea-evaluation.html" class="module-link rounded-lg">Module 2: Evaluating Ideas</a>
+                <a href="module2_toolkit2.html" class="module-link rounded-lg">Module 2: Evaluating Ideas</a>
             </li>
         </ul>
         <ul>
             <li>
-                <a href="team-ideas.html" class="module-link rounded-lg">Module 3: The Case for Team</a>
+                <a href="module3_toolkit2.html" class="module-link rounded-lg">Module 3: The Case for Team</a>
             </li>
         </ul>
         <ul>
